Fixed navbar font size, was overflowing.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -55,7 +55,7 @@
 
 @media only screen and (max-width: 415px) {
   #logo {
-    font-size: 23px;
+    font-size: 20px;
   }
 
   .project-section-item {
